// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Promo Link Contents should render with visually hidden text for media promos 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <span
    role="text"
  >
    <span
      class="emotion-0"
    >
      Listen, 
    </span>
    <span>
      An overtyped headline for a media item
    </span>
    <span
      class="emotion-0"
    >
      , Duration 11,06
    </span>
  </span>
</div>
`;

exports[`Story Promo Link Contents should render with visually hidden text for media with overtyped headline 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <span
    role="text"
  >
    <span
      class="emotion-0"
    >
      Listen, 
    </span>
    <span>
      An overtyped headline for a media item
    </span>
    <span
      class="emotion-0"
    >
      , Duration 11,06
    </span>
  </span>
</div>
`;

exports[`Story Promo Link Contents should render with visually hidden text for photogallery promos 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <span
    role="text"
  >
    <span
      class="emotion-0"
    >
      Image gallery, 
    </span>
    <span>
      A photo gallery item
    </span>
  </span>
</div>
`;
